fix: bound every Autopilot mutation, and make the emergency stop lock-free
Correctness had moved the problem rather than finished it. Giving the
mutators the advisory lock closed the lost update, but disengage() then
waited on an untimed pg_advisory_xact_lock behind an in-flight tick — a
full readiness sweep plus every container start, Temporal round trips
included. A stop that was fast and wrong became correct and potentially
very slow, on the one control a user reaches for when things are already
going wrong.

Two mechanisms, because the two cases want different answers.

disengage() no longer takes the advisory lock at all. It is a single
targeted UPDATE, atomic, holding only a brief row lock. That is safe here
and nowhere else: @DynamicUpdate means a tick's write-back omits `engaged`
unless it called setEngaged itself, and the only thing that does is the
breaker — which writes false too. No interleaving turns the Autopilot back
ON after a human turned it off.

Verified rather than argued. disengage_isNotRevertedByATickWriteBackThat-
LandsAfterIt reproduces the exact interleaving — tick loads the row while
engaged, human stops it mid-tick, tick writes its pass back — and asserts
`engaged` stays false while the tick's own counters still land. Removing
@DynamicUpdate makes that test fail with `engaged` restored to true, which
is how the claim was checked. The companion end-to-end test now also
asserts the next tick starts nothing further: a tick past its re-check
finishes the pass it was on, as the spec requires, and no later one runs.

engage() and update() keep the lock, now bounded by SET LOCAL
lock_timeout, and answer 409 on expiry. A retry is acceptable for turning
the Autopilot on or changing its ceiling; it would not be for turning it
off.

Two things the tests corrected, both worth recording:

- lock_timeout does apply to pg_advisory_xact_lock. Confirmed against
  Postgres, not assumed from the docs: "canceling statement due to lock
  timeout".
- The except